<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.fragments.settings.AlarmSettingsFragment">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/alarm_settings_fragment_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:text="@string/alarm_settings_fragment_headline"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/activity_alarm_settings_switch_alarm_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/alarm_settings_fragment_headline"
                android:text="@string/activity_alarm_settings_switch_alarm_activated" />

            <TextView
                android:id="@+id/activity_alarm_settings_textView_label_for_seekBar_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_alarm_settings_switch_alarm_activated"
                android:layout_below="@+id/activity_alarm_settings_switch_alarm_activated"
                android:layout_marginTop="15dp"
                android:text="@string/activity_alarm_settings_textView_label_for_seekBar_volume" />

            <SeekBar
                android:id="@+id/activity_alarm_settings_seekBar_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/activity_alarm_settings_textView_label_for_seekBar_volume"
                android:layout_marginTop="15dp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/activity_alarm_settings_switch_vibration_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_alarm_settings_seekBar_volume"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_alarm_settings_seekBar_volume"
                android:layout_marginTop="15dp"
                android:text="@string/activity_alarm_settings_switch_vibration_activated" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/activity_alarm_settings_switch_notification_light_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_alarm_settings_switch_vibration_activated"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_alarm_settings_switch_vibration_activated"
                android:layout_marginTop="15dp"
                android:text="@string/activity_alarm_settings_switch_notification_light_activated" />

            <TextView
                android:id="@+id/activity_alarm_settings_textView_label_for_spinner_for_notification_light_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/activity_alarm_settings_textView_label_for_seekBar_volume"
                android:layout_below="@+id/activity_alarm_settings_switch_notification_light_activated"
                android:layout_marginTop="15dp"
                android:text="@string/activity_alarm_settings_textView_label_for_spinner_for_notification_light_color" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/activity_alarm_settings_spinner_for_notification_light_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_alarm_settings_textView_label_for_spinner_for_notification_light_color"
                android:layout_below="@+id/activity_alarm_settings_textView_label_for_spinner_for_notification_light_color"
                android:layout_marginTop="15dp"
                android:entries="@array/color_array" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/activity_alarm_settings_switch_mute_alarm_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_alarm_settings_spinner_for_notification_light_color"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_alarm_settings_spinner_for_notification_light_color"
                android:layout_marginTop="15dp"
                android:text="@string/activity_alarm_settings_switch_mute_alarm_activated" />

            <EditText
                android:id="@+id/activity_alarm_settings_repeat_alarm"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_alarm_settings_switch_mute_alarm_activated"
                android:digits="0123456789"
                android:ems="10"
                android:gravity="center"
                android:hint="1"
                android:inputType="numberSigned" />


            <TextView
                android:id="@+id/activty_alarm_settings_repeat_help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/activity_alarm_settings_switch_mute_alarm_activated"
                android:layout_marginTop="16dp"
                android:text="@string/activty_alarm_settings_repeat_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
