<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomBarItemOne"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/import_settings_dialog_rules"/>
    <item
        android:id="@+id/bottomBarItemTwo"
        android:icon="@drawable/ic_alarm_black_24dp"
        android:title="@string/alarm"/>

    <item
        android:id="@+id/bottomBarItemThree"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/import_settings_dialog_department"/>

    <item
        android:id="@+id/bottomBarItemFour"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/statistics"/>
</menu>