//package rieger.alarmsmsapp.view;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import rieger.alarmsmsapp.R;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withParent;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class MainActivityTest {
//
//    @Rule
//    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
//
//    @Test
//    public void mainActivityTest() {
//        ViewInteraction linearLayout = onView(
//                allOf(withId(R.id.bottomBarItemTwo),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout.perform(click());
//
//        ViewInteraction switchCompat = onView(
//                allOf(withId(R.id.activity_alarm_settings_switch_vibration_activated)));
//        switchCompat.perform(scrollTo(), click());
//
//        ViewInteraction switchCompat2 = onView(
//                allOf(withId(R.id.activity_alarm_settings_switch_notification_light_activated)));
//        switchCompat2.perform(scrollTo(), click());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.activity_alarm_settings_repeat_alarm)));
//        appCompatEditText.perform(scrollTo(), replaceText("3"), closeSoftKeyboard());
//
//        ViewInteraction linearLayout2 = onView(
//                allOf(withId(R.id.bottomBarItemThree),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout2.perform(click());
//
//        ViewInteraction linearLayout3 = onView(
//                allOf(withId(R.id.bottomBarItemFour),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout3.perform(click());
//
//        ViewInteraction linearLayout4 = onView(
//                allOf(withId(R.id.bottomBarItemThree),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout4.perform(click());
//
//        ViewInteraction linearLayout5 = onView(
//                allOf(withId(R.id.bottomBarItemTwo),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout5.perform(click());
//
//        ViewInteraction linearLayout6 = onView(
//                allOf(withId(R.id.bottomBarItemOne),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout6.perform(click());
//
//        ViewInteraction linearLayout7 = onView(
//                allOf(withId(R.id.bottomBarItemThree),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout7.perform(click());
//
//        ViewInteraction appCompatAutoCompleteTextView = onView(
//                allOf(withId(R.id.activity_department_settings_autoCompleteTextView_department_location), isDisplayed()));
//        appCompatAutoCompleteTextView.perform(replaceText("test"), closeSoftKeyboard());
//
//        ViewInteraction linearLayout8 = onView(
//                allOf(withId(R.id.bottomBarItemFour),
//                        withParent(allOf(withId(R.id.bb_bottom_bar_item_container),
//                                withParent(withId(R.id.bb_bottom_bar_outer_container)))),
//                        isDisplayed()));
//        linearLayout8.perform(click());
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.activity_alarm_chart_save_chart), isDisplayed()));
//        appCompatButton.perform(click());
//
//    }
//
//}
